--- a/Web/4.footer/index.html
+++ b/Web/4.footer/index.html
@@ -11,18 +11,18 @@
     <footer>
         <div class="pied">
           <div class="logo">
-            <img src="/image/prison-break-logo.png" alt="logo" style="height: 50px;">
+            <img src="../image/prison-break-logo.png" alt="logo">
+            <h3><a>Prison Break</a></h3>
           </div>
-          <div class="liens">
-            <h3>Prison Break</h3>
-            <p>Adresse</p>
-            <p>Contact</p>
-          </div>
-            <div class="liens1">
-          </div>
-            <div class="liens2">
-          </div>
-        </div>
+          <ul class="liens">
+            
+            <li><a href="">Adresse</a></li>
+            <li><a href="">Contact</a></li>
+            <li><a href="">Politique de confidentialité</a></li> 
+            <li><a href="">Informations complémentaires</a></li> 
+            <li><a href="">Cookies</a></li>
+            <li><a href="">Autres séries</a></li>  
+          </ul>
     </footer>
 </body>
 </html>
