--- a/Web/7.caroussel_html_css_js/index.html
+++ b/Web/7.caroussel_html_css_js/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="carousel">
+    <section class="carousel">
         <div class="carousel-container">
           <div class="carousel-item">
             <img src="https://images.rtl.fr/~c/770v513/rtl/www/842208-wentworth-miller-a-cannes-en-2006.jpg" alt="Image 1">
@@ -22,7 +22,7 @@
         </div>
         <button class="carousel-prev">◀</button>
         <button class="carousel-next">▶</button>
-      </div>
+      </section>
       <script src="script.js"></script>
 </body>
 </html>
